<resources>
    <string name="app_name">AeroRadioControl</string>
    <string name="app_name_v4">AeroRadio v4</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="iscalling">iscalling</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string  name="desc">智能安裝</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="call_other">寻呼</string>
    <string name="speech">对讲</string>
    <string name="order_music">点播</string>
    <string name="be_call">被寻呼</string>
    <string name="task">任务</string>
    <string name="short_task">快捷任务</string>
    <string name="set_machine"> 请到市场安装讯飞引擎，然后设置默认引擎</string>
    <string name="scan_account">请检查账户和密码</string>
    <string name="ipOrNoErro">地址或端口有误</string>
    <string name="ipErro">地址有误</string>
    <string name="messageAbsent">请填写完整信息</string>
    <string name="conntect_time_out">服务器连接超时</string>
    <string name="function_login_success">功能服务器登陆成功</string>
    <string name="sever_exception">服务器异常</string>
    <string name="user_name_or_password_error">用户名或密码错误</string>
    <string name="on_being_call">正在被寻呼</string>
    <string name="login_sucess">公网登录成功</string>
    <string name="selectnull">全不</string>
    <string name="check_the_ip_in_setting">请在设置栏中确定服务器IP是否正确</string>
    <string name="sure">确定</string>
    <string name="enginetip">没有讯飞引擎请先安装并设置为默认</string>
    <string name="cancel">取消</string>
    <string name="next">下一步</string>
    <string name="sign">提示</string>
    <string name="out">退出</string>
    <string name="net_work_disable_please_check">未检测到网络，请检查网络配置</string>
    <string name="get_token_failed">服务器认证失败，请重启应用</string>
    <string name="stop_tolk">结束通话</string>
     <string name="man">男声</string>
    <string name="women">女声</string>
    <string name="up">正在上传</string>
    <string name="taskname">任务名未上传成功，请点击属性按钮再次上传或检测服务器</string>
    <string name="selectterminal">请选择终端</string>
    <string name="convenientcall">未设置</string>
    <string name="settingIp">设置IP</string>
    <string name="terminal">"终端列表"</string>
    <string name="terminals">"终端"</string>
    <string name="mould">"模板"</string>
    <string name="tempvoice">"临时语音"</string>
    <string name="network">"网络任务"</string>
    <string name="history">"历史记录"</string>
    <string name="setting">"系统设置"</string>
    <string name="user">"用户名:"</string>
    <string name="code">"密    码:"</string>
    <string name="server">"服务器:"</string>
    <string name="loginno">"端口号:"</string>
    <string name="notoken">token  未获取</string>
    <string name="foldermanager">文件管理</string>
    <string name="medialib">点播媒体库</string>
    <string name="medialist">音乐列表</string>
    <string name="music">音乐</string>
    <string name="scan">查看</string>
    <string name="select">选择</string>
    <string name="selectedlist">已选列表</string>
    <string name="zoneterminal">分区终端</string>
    <string name="medianame">名称</string>
    <string name="medianames">媒体名称</string>
    <string name="terminalstyle">终端类型</string>
    <string name="terminal_name">终端名称</string>
    <string name="terminalstate">终端状态</string>
    <string name="taskmusic">任务音乐</string>
    <string name="ipaddress">ip地址</string>
    <string name="localip">本机IP</string>
    <string name="workname">任务名</string>
    <string name="number">序号</string>
    <string name="playtime">播放时长</string>
    <string name="playtimes">运行时区</string>
    <string name="task_num">任务数量</string>
    <string name="exectime">执行时间</string>
    <string name="timetype">定时类型</string>
    <string name="execstyle">执行模式</string>
    <string name="playorstop">执停</string>
    <string name="onoroff">启停</string>
    <string name="volume">音量</string>
    <string name="callOthers">寻呼发起</string>
    <string name="othercalls">寻呼接收</string>
    <string name="speak">对讲</string>
    <string name="order">顺序</string>
    <string name="operation">操作</string>
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    <string name="autolisten">自动接听</string>
    <string name="autolistentim">自动接听时长</string>
    <string name="callcustomer">联系客服</string>
    <string name="screandeblock">屏保解锁</string>
    <string name="loosen">松开手指</string>
    <string name="version">服务器版本号：</string>
    <string name="state">"状态"</string>
    <string name="selected"> selected</string>
    <string name="connected"> "已接通"</string>
    <string name="disconnected"> "未接通"</string>
    <string name="pick"> "拾取"</string>
    <string name="edit"> "编辑"</string>
    <string name="selectall">全选</string>
    <string name="call"> "寻呼"</string>
    <string name="zoneselect"> "框选"</string>
    <string name="clearselect"> "清空"</string>
    <string name="zone"> "分区"</string>
    <string name="edit_latlng"> "编辑经纬度"</string>
    <string name="talk"> "对讲"</string>
    <string name="play"> "点播"</string>
    <string name="resets"> "复位"</string>
    <string name="onmap"> "地图显示"</string>
    <string name="deny"> "拒绝"</string>
    <string name="apachemusic"> "网络音乐"</string>
    <string name="sdmusic"> "U盘音乐"</string>
    <string name="namenull"> "用户名为空！"</string>
    <string name="passnull"> "密码为空！"</string>
    <string name="ipnull"> "服务器IP地址为空！"</string>
    <string name="ipnumnull"> "服务器IP地址端口为空！"</string>
    <string name="checkfail"> "授权校验失败！"</string>
    <string name="logout"> "注销"</string>
    <string name="ipset"> "设置IP"</string>
    <string name="clearcache"> "清除记录"</string>
    <string name="restorefactory"> "恢复出厂设置"</string>
    <string name="backup"> "设置备份"</string>
    <string name="backupset"> "备份还原"</string>
    <string name="settime"> "设置时间"</string>
    <string name="setsecret"> "设置屏保密码"</string>
    <string name="setwaittime"> "设置待屏时长"</string>
    <string name="checkintime"> "定时轮询"</string>
    <string name="terminalsearch"> "终端搜索"</string>
    <string name="online"> "在线"</string>
    <string name="offline"> "离线"</string>
    <string name="zonenames">分区名称： 全部终端</string>
    <string name="onlineter"> "空闲终端： "</string>
    <string name="offlineter"> "离线终端： "</string>
    <string name="busylineter"> "忙碌终端： "</string>
    <string name="selectedter"> "已选终端： "</string>
    <string name="preopen"> "预开电源"</string>
    <string name="off"> "停用"</string>
    <string name="on"> "启用"</string>
    <string name="times">秒</string>
    <string name="set"> "设置"</string>
    <string name="start"> "开始"</string>
    <string name="stop"> "停止"</string>
    <string name="kindcall"> "普通寻呼"</string>
    <string name="fastcall"> "快捷寻呼"</string>
    <string name="visualcall"> "视频寻呼"</string>
    <string name="kindplay"> "普通点播"</string>
    <string name="fastplay"> "快捷点播"</string>
    <string name="confirm"> "确认"</string>
    <string name="rebuilt"> "编辑"</string>
    <string name="copy"> "复制"</string>
    <string name="add"> "添加"</string>
    <string name="delete"> "删除"</string>
    <string name="use"> "使用"</string>
    <string name="addtask"> "添加任务"</string>
    <string name="pleasegetmachine"> "请选择终端"</string>
    <string name="pleasegetprog"> "请选择媒体"</string>
    <string name="duplicatename"> "任务名重复请更换"</string>
    <string name="userlist"> "用户列表"</string>
    <string name="musiclist"> "音乐列表"</string>
    <string name="selectmusic"> "选音乐"</string>
    <string name="back"> "返回"</string>
    <string name="offconnect"> "挂断"</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期天</string>
    <string name="tasknames"> "任务名称"</string>
    <string name="pleasewritename"> "请填写名称"</string>
    <string name="usersize"> "用户数量"</string>
    <string name="mediasize"> "媒体数量"</string>
    <string name="loginnum"> "端口号"</string>
    <string name="calling"> "等待对方应答"</string>
    <string name="noterminalonline"> "没有终端在线"</string>
    <string name="terminalname"> "对象昵称 ："</string>
    <string name="iperro"> "IP未设置请检查网线或前往设置 ："</string>
    <string name="nowan"> "未检测到网络，请检查网络配置"</string>
    <string name="pleasewriteall"> "请填写完整登陆信息"</string>
    <string name="volumeset"> "音量设置"</string>
    <string name="playvolume"> "播放音量:"</string>
    <string name="soundselect"> "铃声选择"</string>
    <string name="musicselect"> "选音乐"</string>
    <string name="searchuser"> "搜索用户"</string>
    <string name="original"> "是否自动接听 :"</string>
    <string name="yes"> "是"</string>
    <string name="no"> "否"</string>
    <string name="originaltime"> "自动接听时长 :"</string>
    <string name="reboot"> "重启"</string>
    <string name="intelligentInstall"> "智能安装"</string>
    <string name="playinsingle"> "单曲循环"</string>
    <string name="playinorder"> "顺序播放"</string>
    <string name="playinrandom"> "随机播放"</string>
    <string name="taskcantstart"> "任务不可执行"</string>
    <string name="updatafialed"> "重新失败"</string>
    <string name="upfialed"> "上传失败"</string>
    <string name="freshzone"> "刷新了分区"</string>
    <string name="downlocalmap"> "下载本地地图"</string>
    <string name="local"> "南昌"</string>
    <string name="taskcontribute">"任务属性"</string>
    <string name="schemecontribute">"方案属性"</string>
    <string name="terminallist">终端列表</string>
    <string name="upanmedia">U盘媒体</string>
    <string name="folderselect">文件夹选择</string>
    <string name="upfile">上传媒体</string>
    <string name="upanplay">U盘点播</string>
    <string name="netmedia">网络</string>
    <string name="change">修改</string>
    <string name="createzoneterminal">创建终端分区</string>
    <string name="createtime">创建时间</string>
    <string name="week_select">星期选择</string>
    <string name="deviceid">设备ID</string>
    <string name="channel">通道</string>
    <string name="zonename">分区名</string>
    <string name="playtimelength">播放时长</string>
    <string name="broadtime">播放时间</string>
    <string name="description">描述</string>
    <string name="startdate">开始日期</string>
    <string name="enddate">结束日期</string>
    <string name="ttsterminal">Tts终端</string>
    <string name="datetime">创建时间</string>
    <string name="taskvolume">任务音量</string>
    <string name="cyclenum">循环次数</string>
    <string name="woman">女声</string>
    <string name="sound_mode">声音模式</string>
    <string name="order_num">序号</string>
    <string name="deleteall">删除全部</string>
    <string name="taskpostsuccess">任务提交成功</string>
    <string name="taskrefreshsuccess">任务更新成功</string>
    <string name="ipNotOk">IP格式不对</string>
    <string name="serverVersion">服务器版本号：</string>
    <string name="shutdown"> "重启"</string>
    <string name="taskpriority"> "任务级别"</string>
    <string name="simplerate"> "采样率"</string>
    <string name="bitrate"> "比特率"</string>
    <string name="caiboterminal"> "采播终端"</string>
    <string name="samplingrate"> "采样率"</string>
    <string name="biterate"> "比特率"</string>
    <string name="terminalchannel"> "终端通道"</string>
    <string name="preopencaibo"> "采播预开"</string>
    <string name="broadmode"> "播放模式"</string>
    <string name="sendmode"> "发送模式"</string>
    <string name="pleasesetzonename"> "请填写分区名称"</string>
    <string name="pleaseaddtask"> "请添加作息任务"</string>
    <string name="terminalzone"> "分区"</string>
    <string name="zonelist"> "分区列表"</string>
    <string name="please_select_zone"> "请先选择分区"</string>
    <string name="nozone"> "无分区"</string>
    <string name="scheme_name"> "方案名"</string>
    <string name="no_scheme"> "无方案"</string>
    <string name="dangertip"> "紧急广播使用说明"</string>
</resources>