<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pop_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/distance"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginRight="@dimen/distance"
        android:background="@color/side_title_back"
        android:gravity="center"
        android:text="@string/taskcontribute"
        android:textColor="@color/side_title_text"
        android:textSize="@dimen/text_big" />

    <LinearLayout
        android:id="@+id/content_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="音量" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=":" />
        <TextView
            android:id="@+id/volume_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000"/>
        <SeekBar
            android:id="@+id/volume_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="语速" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=":" />
        <TextView
            android:id="@+id/speed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000"/>
        <SeekBar
            android:id="@+id/speed_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="循环数" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=":" />
        <TextView
            android:id="@+id/cycle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000"/>
        <SeekBar
            android:id="@+id/time_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="男女声" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=":" />

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/man" />

            <RadioButton
                android:id="@+id/woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/women" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/engine_tip"
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:layout_gravity="bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50.0dip"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/enginetip"
            android:textColor="@color/colorBuleDark"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:layout_gravity="bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/confirm_bt"
            android:layout_width="match_parent"
            android:layout_height="50.0dip"
            android:layout_weight="1.0"
            android:gravity="center"
            android:background="@color/colorBuleDark"
            android:text="@string/sure" />


    </LinearLayout>
</LinearLayout>